styled the css for the header

--- a/index.html
+++ b/index.html
@@ -4,21 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TOPLandingPage</title>
+    <title>TOP Landing Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="header">
-        <div>
-            <h1 class="logo">Ralat</h1>
+        <div class="header-wrap">
+            <div class="logo">
+                <h1>Ralat</h1>
+            </div>
+            <nav class="nav-bar">
+                <ul>
+                    <li class="links"><a href="#">About</a></li>
+                    <li class="links"><a href="#">Quote</a></li>
+                    <li class="links"><a href="#">Sign Up</a></li>
+                </ul>
+            </nav>
         </div>
-
-        <nav class="nav-bar">
-            <ul>
-                <li class="links">About</li>
-                <li class="links">Quote</li>
-                <li class="links">Sign Up</li>
-            </ul>
-        </nav>
     </header>
 </body>
 </html>
