Updated HTML tags and added credit for image in README file

--- a/index.html
+++ b/index.html
@@ -22,5 +22,18 @@
             </nav>
         </div>
     </header>
+
+    <section class="hero">
+        <div class="hero-container">
+            <div class="hero-text">
+                <h2 class="main-txt">This Website is Awesome</h2>
+                <h3 class="secondary-txt">This website has some subtext that goes here under the main title. Its a smaller font and color is lower contrast. </h3>   
+                <a href="#" class="hero-btn">Sign up</a>
+            </div>
+            <div class="hero-image">
+                <img src="images/hero-im.jpg" alt="Standing Man" class="">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
