--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
         <div class="hero-container">
             <div class="hero-text">
                 <h2 class="main-txt">This Website is Awesome</h2>
-                <h3 class="secondary-txt">This website has some subtext that goes here under the main title. Its a smaller font and color is lower contrast. </h3>   
+                <p class="secondary-txt">This website has some subtext that goes here under the main title.</p>
+                <p class="secondary-txt"> Its a smaller font and color is lower contrast. </p>   
                 <a href="#" class="hero-btn">Sign up</a>
             </div>
             <div class="hero-image">
-                <img src="images/hero-im.jpg" alt="Standing Man" class="">
+                <img src="images/he2.jpg" alt="Standing Man" class="">
             </div>
         </div>
     </section>
