Finished the hero section including both text and image

--- a/index.html
+++ b/index.html
@@ -26,11 +26,10 @@
     <section class="hero">
         <div class="hero-container">
             <div class="hero-text">
-                <h2 class="main-txt">This Website is Awesome</h2>
-                <p class="secondary-txt">This website has some subtext that goes here under the main title.</p>
-                <p class="secondary-txt"> Its a smaller font and color is lower contrast. </p>   
+                <h2 class="main-txt">This website is awesome</h2>
+                <p class="secondary-txt">This website has some subtext that goes here under the main title. Its a smaller font and color is lower contrast.</p> 
                 <a href="#" class="hero-btn">Sign up</a>
-            </div>
+           </div>
             <div class="hero-image">
                 <img src="images/he2.jpg" alt="Standing Man" class="">
             </div>
