--- a/index.html
+++ b/index.html
@@ -35,5 +35,21 @@
             </div>
         </div>
     </section>
+
+    <section class="about">
+        <div class="about-container">
+            <div class="about-head">
+                <h2>Some random information.</h2>
+            </div>
+
+            <div class="about-content">
+                <div class="content">Realiable</div>
+                <div class="content">Efficient</div>
+                <div class="content">Price-Friendly</div>
+                <div class="content">Experienced</div>
+            </div>
+
+        </div>
+    </section>
 </body>
 </html>
