--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a href="#" class="hero-btn">Sign up</a>
            </div>
             <div class="hero-image">
-                <img src="images/he2.jpg" alt="Standing Man" class="">
+                <img src="images/he2.jpg" alt="Man Using A Laptop" class="">
             </div>
         </div>
     </section>
@@ -43,12 +43,23 @@
             </div>
 
             <div class="about-content">
-                <div class="content">Realiable</div>
-                <div class="content">Efficient</div>
-                <div class="content">Price-Friendly</div>
-                <div class="content">Experienced</div>
+                <div class="content">
+                    <img src="images/A1.jpg" alt="Holding a Bulb">
+                    <h3>Reliable</h3>    
+                </div>
+                <div class="content">
+                    <img src="images/A2.jpg" alt="Holding a Bulb">
+                    <h3>Efficient</h3>    
+                </div>
+                <div class="content">
+                    <img src="images/A3.jpg" alt="Dollar Bill">
+                    <h3>Price-Friendly</h3>    
+                </div>
+                <div class="content">
+                    <img src="images/A4.jpg" alt="Professional Lady">
+                    <h3>Experienced</h3>    
+                </div>
             </div>
-
         </div>
     </section>
 </body>
